--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "~1.4.4",
     "cookies": "^0.9.1",
     "debug": "~2.6.9",
